# pitifful

./: README.md  pyproject.toml  setup.py
example/: example.cpp  makefile
include/: pitifful.h  pitifful_deflate.h
src/: module.cpp
src/pitifful/: __init__.py
