[build-system]
requires = ["setuptools>42", "wheel", "pybind11>=2.6"]
build-backend = "setuptools.build_meta"

[project]
name = "pitifful"
version = "0.1.0"
requires-python = ">=3.7"
readme = "README.md"
dependencies = [
    "pybind11>=2.6",
    "wheel",
    "numpy>=1.18",
    "tifffile",
]

[options]
packages = [
    "pitifful",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true
